- Add some styles - Add JFoenix